Pages no longer overlap menu

--- a/public/style.css
+++ b/public/style.css
@@ -40,7 +40,7 @@ html, body {
     position: relative;
     pointer-events: none;
     display: flex;
-    align-items: center;
+    overflow: hidden;
 }
 
 .timer {
@@ -61,11 +61,14 @@ ul {
 }
 
 .main_menu {
+    flex: 1;
     margin: 0 auto;
     display: flex;
     width: 1000px;
+    max-width: 1000px;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
 }
 
 .menu_box {
@@ -189,20 +192,20 @@ ul {
 }
 
 .page {
-    position: fixed;
-    right: 0;
-    top: 0;
     height: 100vh;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.298039) 0px 19px 60px, rgba(0, 0, 0, 0.219608) 0px 15px 20px;
     width: 0;
+    max-width: 0;
     padding: 0;
     box-sizing: border-box;
     transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+    pointer-events: all;
 }
 
 .page.active {
     width: 30%;
+    max-width: 30%;
     padding: 2rem;
 }
 
